fixed video alignment

--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -16,6 +16,10 @@
 
 /* #Site Styles
 ================================================== */
+.video {
+	width: 601px;
+	height: 338px; 
+}
 
 /* #Page Styles
 ================================================== */
@@ -24,19 +28,33 @@
 ================================================== */
 
 	/* Smaller than standard 960 (devices and browsers) */
-	@media only screen and (max-width: 959px) {}
+	@media only screen and (max-width: 959px) {
+			
+	}
 
 	/* Tablet Portrait size to standard 960 (devices and browsers) */
 	@media only screen and (min-width: 768px) and (max-width: 959px) {}
 
 	/* All Mobile Sizes (devices and browser) */
-	@media only screen and (max-width: 767px) {}
+	@media only screen and (max-width: 767px) {
+		.video {
+			width: 400px;
+			height: 225px;		 	
+		}
+	}
 
 	/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
 	@media only screen and (min-width: 480px) and (max-width: 767px) {}
 
 	/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 	@media only screen and (max-width: 479px) {}
+
+	@media only screen and (max-width: 320px) {
+		.video {
+			width: 300px;
+			height: 169px;		 	
+		}
+	}
 
 
 /* #Font-Face
